# aoc-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  gen_badges.py
days/: 2024_day01.c  2025_day01.c  2025_day02.c  2025_day03.c  2025_day04.c  2025_day05.c  2025_day06.c  2025_day07.c  2025_day08.c  day00.c
scripts/: newday.sh  today.sh
src/: aoc_client.c  aoc_client.h  runner.c  solver.h  util.c  util.h
src/containers/: grid.c  grid.h  hashmap.c  hashmap.h  numset.c  numset.h  point.h  queue.c  queue.h  set.c  set.h  stack.c  stack.h  stringbuilder.c  stringbuilder.h  vector.c  vector.h
src/tests/: containers_test.c
